--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Kurt Shuler Homelab Documentation
+title: Shuler Homelab Documentation
 description: How to documents so that I can recreate my homelab networks and servers when I break them.
 theme: just-the-docs
 
