--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shuler Homelab Docs
-description: How to documents so that I can recreate my homelab networks and servers when I break them.
+description: How-to documents so that I can recreate my homelab networks and servers when I break them.
 theme: just-the-docs
 
 url: https://kurtshuler.github.io/documentation/
